--- a/app/src/main/res/layout/card_album.xml
+++ b/app/src/main/res/layout/card_album.xml
@@ -6,8 +6,8 @@
 
     <data>
         <variable
-            name="user"
-            type="mitso.volodymyr.tryretrofit.models.User" />
+            name="album"
+            type="mitso.volodymyr.tryretrofit.models.Album" />
 
         <variable
             name="clicker"
@@ -23,10 +23,10 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{user.name}"
+            android:text="@{album.title}"
             android:textColor="@color/c_card_text"
             android:textSize="@dimen/d_card_text_size"
-            tools:text="user name" />
+            tools:text="album title" />
 
         <View
             android:layout_width="match_parent"
