--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="d_card_margin_small">15dp</dimen>
+    <dimen name="d_card_margin_big">30dp</dimen>
+
+    <dimen name="d_user_info_padding">10dp</dimen>
+
+    <dimen name="d_card_text_size">15sp</dimen>
+
 </resources>
