nine fragments done

--- a/app/src/main/res/layout/card_comment.xml
+++ b/app/src/main/res/layout/card_comment.xml
@@ -1,26 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
-            name="todo"
-            type="mitso.volodymyr.tryretrofit.models.Todo" />
+            name="comment"
+            type="mitso.volodymyr.tryretrofit.models.Comment" />
+
+        <variable
+            name="clicker"
+            type="android.view.View.OnClickListener" />
     </data>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:onClickListener="@{clicker}">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{todo.toString()}"
+            android:text="@{comment.email}"
             android:textColor="@color/c_card_text"
             android:textSize="@dimen/d_card_text_size"
-            tools:text="todo id" />
+            tools:text="post title" />
 
         <View
             android:layout_width="match_parent"
