--- a/app/src/main/res/layout/card_user.xml
+++ b/app/src/main/res/layout/card_user.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@{user.name}"
-            android:textColor="@color/c_card_text"
+            android:textColor="@color/c_text"
             android:textSize="@dimen/d_card_text_size"
             tools:text="user name" />
 
