--- a/app/src/main/res/layout/card_todo.xml
+++ b/app/src/main/res/layout/card_todo.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@{todo.toString()}"
-            android:textColor="@color/c_card_text"
+            android:textColor="@color/c_text"
             android:textSize="@dimen/d_card_text_size"
             tools:text="todo id" />
 
