--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,7 +5,13 @@
     <dimen name="d_card_margin_big">30dp</dimen>
     <dimen name="d_card_text_size">15sp</dimen>
 
-    <dimen name="object_info_tv_padding">15dp</dimen>
-    <dimen name="object_info_btn_margin">10dp</dimen>
+    <dimen name="d_object_info_text_size">15sp</dimen>
+    <dimen name="d_object_info_tv_margin">15dp</dimen>
+    <dimen name="d_object_info_btn_margin">10dp</dimen>
+
+    <dimen name="d_create_object_id_text_size">17sp</dimen>
+    <dimen name="d_create_object_info_text_size">15sp</dimen>
+    <dimen name="d_create_object_tv_et_margin">15dp</dimen>
+    <dimen name="d_create_object_btn_margin">10dp</dimen>
 
 </resources>
