--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,6 @@
     <dimen name="d_create_object_tv_et_margin">15dp</dimen>
     <dimen name="d_create_object_btn_margin">10dp</dimen>
 
+    <dimen name="d_progress_dialog_margin">10dp</dimen>
+
 </resources>
