--- a/app/src/main/res/layout/fragment_post_info.xml
+++ b/app/src/main/res/layout/fragment_post_info.xml
@@ -43,6 +43,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:text="@string/s_comments"
+                android:theme="@style/stl_btn"
                 app:onClickListener="@{clickerComments}" />
 
         </RelativeLayout>
