--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -52,6 +52,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:text="@string/s_todos"
+                android:theme="@style/stl_btn"
                 app:onClickListener="@{clickerTodos}" />
 
             <Button
@@ -60,6 +61,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:text="@string/s_albums"
+                android:theme="@style/stl_btn"
                 app:onClickListener="@{clickerAlbums}" />
 
             <Button
@@ -69,6 +71,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
                 android:text="@string/s_posts"
+                android:theme="@style/stl_btn"
                 app:onClickListener="@{clickerPosts}" />
 
         </RelativeLayout>
