--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <FrameLayout
-        android:id="@+id/fl_container"
+        android:id="@+id/fl_container_am"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
