--- a/app/src/main/res/layout/card_comment.xml
+++ b/app/src/main/res/layout/card_comment.xml
@@ -30,7 +30,7 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="@dimen/d_card_line_height"
             android:background="@color/c_card_line" />
 
     </LinearLayout>
