--- a/app/src/main/res/layout/fragment_list_common.xml
+++ b/app/src/main/res/layout/fragment_list_common.xml
@@ -8,7 +8,7 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_models"
+            android:id="@+id/rv_models_flc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
